--- a/ApiGetWay/Consul.MicroServer.ApiGetway/Properties/launchSettings.json
+++ b/ApiGetWay/Consul.MicroServer.ApiGetway/Properties/launchSettings.json
@@ -25,6 +25,11 @@
       },
       "dotnetRunMessages": "true",
       "applicationUrl": "http://localhost:5001"
+    },
+    "Docker": {
+      "commandName": "Docker",
+      "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}/swagger",
+      "publishAllPorts": true
     }
   }
 }
