--- a/Clients/Consul.MicroServer.Client/appsettings.json
+++ b/Clients/Consul.MicroServer.Client/appsettings.json
@@ -6,5 +6,6 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "getwayHost": "http://localhost:5001"
 }
