--- a/ApiGetWay/Consul.MicroServer.ApiGetway/appsettings.json
+++ b/ApiGetWay/Consul.MicroServer.ApiGetway/appsettings.json
@@ -6,6 +6,5 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*",
-  "urls": "http://+:5001"
+  "AllowedHosts": "*"
 }
