--- a/MicroService/UserService/Consul.MicroService.UserService/appsettings.json
+++ b/MicroService/UserService/Consul.MicroService.UserService/appsettings.json
@@ -7,13 +7,12 @@
     }
   },
   "ConnectionStrings": {
-    "content": "Data Source=127.0.0.1;port=3306;Initial Catalog=accountbook;user id=root;password=198822;Convert Zero Datetime=True;"
+    "content": "Data Source=192.168.1.60;port=3306;Initial Catalog=accountbook;user id=root;password=198822;Convert Zero Datetime=True;"
   },
   "AllowedHosts": "*",
-  "urls":"http://+:5000",
   "consul": {
     "Enable": true,
-    "ConsulCenterIp": "localhost",
+    "ConsulCenterIp": "192.168.1.60",
     "ConsulCenterPort": 8500,
     "ServerName": "UserService",
     "ClientIp": "192.168.1.60",
