--- a/MicroService/UserService/Consul.MicroService.UserService/Dockerfile
+++ b/MicroService/UserService/Consul.MicroService.UserService/Dockerfile
@@ -27,3 +27,4 @@ FROM base AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
 ENTRYPOINT ["dotnet", "Consul.MicroService.UserService.dll"]
+CMD ["--urls","http://*:80"]
