--- a/MicroService/UserService/Consul.MicroService.UserService/appsettings.json
+++ b/MicroService/UserService/Consul.MicroService.UserService/appsettings.json
@@ -8,7 +8,7 @@
   },
   "p": 6,
   "ConnectionStrings": {
-    "content": "Data Source=192.168.1.60;port=3306;Initial Catalog=accountbook;user id=root;password=198822;Convert Zero Datetime=True;"
+    "content": "Data Source=192.168.1.60;port=3927;Initial Catalog=userdb;user id=root;password=198822;Convert Zero Datetime=True;"
   },
   "AllowedHosts": "*",
   "consul": {
