--- a/MicroService/UserService/Consul.MicroService.UserService/Properties/launchSettings.json
+++ b/MicroService/UserService/Consul.MicroService.UserService/Properties/launchSettings.json
@@ -25,7 +25,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
       "dotnetRunMessages": "true",
-      "applicationUrl": "http://localhost:6001"
+      "applicationUrl": "http://192.168.1.60:6001"
     },
     "Docker": {
       "commandName": "Docker",
