--- a/Clients/Consul.MicroServer.Client/Properties/launchSettings.json
+++ b/Clients/Consul.MicroServer.Client/Properties/launchSettings.json
@@ -18,12 +18,18 @@
     "Consul.MicroServer.Client": {
       "commandName": "Project",
       "launchBrowser": true,
-      "launchUrl": "/",
+      "launchUrl": "",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
-      "dotnetRunMessages": "true",
-      "applicationUrl": "http://localhost:5002"
+      "dotnetRunMessages": "true"
+     
+    },
+    "Docker": {
+      "commandName": "Docker",
+      "launchBrowser": true,
+      "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}",
+      "publishAllPorts": true
     }
   }
 }
