--- a/Clients/Consul.MicroServer.Client/appsettings.json
+++ b/Clients/Consul.MicroServer.Client/appsettings.json
@@ -7,5 +7,14 @@
     }
   },
   "AllowedHosts": "*",
-  "getwayHost": "http://localhost:5001"
+  "getwayHost": "http://localhost:5001",
+
+  "consul": {
+    "Enable": true,
+    "ConsulCenterIp": "192.168.1.60",
+    "ConsulCenterPort": 8500,
+    "ServerName": "mvc",
+    "ClientIp": "192.168.1.60",
+    "ClientPort": 8001
+  }
 }
