--- a/NginxSync/nginx.conf
+++ b/NginxSync/nginx.conf
@@ -16,6 +16,9 @@ events {
 
 http {
 	
+	proxy_buffer_size  128k;
+	proxy_buffers   32 32k;
+	proxy_busy_buffers_size 128k;
 	server_names_hash_bucket_size 512;
     include       mime.types;
     default_type  application/octet-stream;
@@ -38,15 +41,29 @@ http {
 			upsync 192.168.1.60:8500/v1/kv/upstreams/identity  upsync_timeout=6m upsync_interval=1000ms upsync_type=consul strong_dependency=off;
 			#upsync_dump_path /usr/local/nginx/conf/servers_test.conf;
 	}
+	upstream mvc {
+			server 127.0.0.1:11111 down;
+			upsync 192.168.1.60:8500/v1/kv/upstreams/mvc  upsync_timeout=6m upsync_interval=1000ms upsync_type=consul strong_dependency=off;
+	}
 	
 	server {
 		listen       80;
-		server_name  localhost;
-		
+		server_name  u.ke.me;
+		index  home;
 		location / {
-		    proxy_set_header Host $Host:4002;
-			 proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+			#proxy_cookie_path / "/; secure; SameSite=None";
+		    proxy_set_header Host $Host;
 			proxy_pass  http://balance/;
+		}
+	}
+	
+	server {
+		listen       80;
+		server_name  c.ke.me;
+		index  home;
+		location / {
+		    proxy_set_header Host $Host;
+			proxy_pass  http://mvc/;
 		}
 	}
 }
