--- a/Clients/Consul.MicroServer.Client/appsettings.json
+++ b/Clients/Consul.MicroServer.Client/appsettings.json
@@ -11,7 +11,7 @@
 
   "consul": {
     "Enable": true,
-    "ConsulCenterIp": "192.168.1.60",
+    "ConsulCenterIp": "d.ke.me",
     "ConsulCenterPort": 8500,
     "ServerName": "mvc",
     "ClientIp": "192.168.1.60",
