--- a/MicroService/UserService/Consul.MicroService.UserService/appsettings.json
+++ b/MicroService/UserService/Consul.MicroService.UserService/appsettings.json
@@ -13,7 +13,7 @@
   "AllowedHosts": "*",
   "consul": {
     "Enable": true,
-    "ConsulCenterIp": "192.168.1.60",
+    "ConsulCenterIp": "d.ke.me",
     "ConsulCenterPort": 8500,
     "ServerName": "UserService",
     "ClientIp": "192.168.1.60",
