--- a/MicroService/IdentityService/Consul.MicroService.IdentityService/appsettings.json
+++ b/MicroService/IdentityService/Consul.MicroService.IdentityService/appsettings.json
@@ -12,7 +12,7 @@
   "AllowedHosts": "*",
   "consul": {
     "Enable": true,
-    "ConsulCenterIp": "192.168.1.60",
+    "ConsulCenterIp": "d.ke.me",
     "ConsulCenterPort": 8500,
     "ServerName": "Identity",
     "ClientIp": "192.168.1.60",
