--- a/MicroService/UserService/Consul.MicroService.UserService/appsettings.json
+++ b/MicroService/UserService/Consul.MicroService.UserService/appsettings.json
@@ -12,11 +12,19 @@
   },
   "AllowedHosts": "*",
   "consul": {
-    "Enable": true,
+    "Enable": false,
     "ConsulCenterIp": "d.ke.me",
     "ConsulCenterPort": 8500,
     "ServerName": "UserService",
     "ClientIp": "192.168.1.60",
     "ClientPort": 6001
+  },
+  "cap": {
+    "mqHost": "192.168.1.60",
+    "mqPort": "5672",
+    "mqUserName": "admin",
+    "mqPassWord": "admin",
+    "pre": "cap"
+
   }
 }
